--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ after_success:
   - docker build -t cirant3/multi-server ./server
   - docker build -t cirant3/multi-worker ./worker
 
+  # login in docker to be able to push images 
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
 
   - docker push cirant3/multi-client
@@ -23,3 +24,17 @@ after_success:
   - docker push cirant3/multi-worker
 
 language: generic 
+
+deploy:
+  edge: true
+  provider: elasticbeanstalk
+  region: us-east-2
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-us-east-2-270214867126
+  bucket_path: docker-multi
+   on: 
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: $AWS_SECRET_KEY
