--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,12 +21,12 @@ services:
     depends_on:
       - postgres
     environment:
-      - REDIS_HOST=redis,
-      - REDIS_PORT=6379,
-      - PGUSER=postgres,
-      - PGHOST=postgres,
-      - PGDATABASE=postgres,
-      - PGPASSWORD=postgres_password,
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - PGUSER=postgres
+      - PGHOST=postgres
+      - PGDATABASE=postgres
+      - PGPASSWORD=postgres_password
       - PGPORT=5432
   client:
     build: 
